--- a/starter/cluster-original.yml
+++ b/starter/cluster-original.yml
@@ -1,4 +1,5 @@
-# mainatiner: nick.reva@snap.com
+# author: nick.reva@snap.com
+# created April 11, 2021
 nodes:
 - address: 192.168.50.101
   port: "22"
@@ -44,9 +45,9 @@ services:
     cert: ""
     key: ""
     path: ""
-    uid: 52034
-    gid: 52034
-    snapshot: true
+    uid: 0
+    gid: 0
+    snapshot: null
     retention: ""
     creation: ""
     backup_config: null
@@ -60,28 +61,21 @@ services:
     win_extra_env: []
     service_cluster_ip_range: 10.43.0.0/16
     service_node_port_range: ""
-    pod_security_policy: true
+    pod_security_policy: false
     always_pull_images: false
-    secrets_encryption_config:
-      enabled: true
-      custom_config: null
-    audit_log:
-      enabled: true
-      configuration: null
+    secrets_encryption_config: null
+    audit_log: null
     admission_configuration: null
-    event_rate_limit:
-      enabled: true
-      configuration: null
+    event_rate_limit: null
   kube-controller:
     image: ""
-    extra_args:
-      feature-gates: RotateKubeletServerCertificate=true
+    extra_args: {}
     extra_binds: []
     extra_env: []
     win_extra_args: {}
     win_extra_binds: []
     win_extra_env: []
-    cluster_cidr: ""
+    cluster_cidr: 10.42.0.0/16
     service_cluster_ip_range: 10.43.0.0/16
   scheduler:
     image: ""
@@ -93,10 +87,7 @@ services:
     win_extra_env: []
   kubelet:
     image: ""
-    extra_args:
-      feature-gates: RotateKubeletServerCertificate=true
-      protect-kernel-defaults: "true"
-      tls-cipher-suites: TLS_ECDHE_ECDSA_WITH_AES_128_GCM_SHA256,TLS_ECDHE_RSA_WITH_AES_128_GCM_SHA256,TLS_ECDHE_ECDSA_WITH_CHACHA20_POLY1305,TLS_ECDHE_RSA_WITH_AES_256_GCM_SHA384,TLS_ECDHE_RSA_WITH_CHACHA20_POLY1305,TLS_ECDHE_ECDSA_WITH_AES_256_GCM_SHA384,TLS_RSA_WITH_AES_256_GCM_SHA384,TLS_RSA_WITH_AES_128_GCM_SHA256
+    extra_args: {}
     extra_binds: []
     extra_env: []
     win_extra_args: {}
@@ -104,7 +95,8 @@ services:
     win_extra_env: []
     cluster_domain: cluster.local
     infra_container_image: ""
-    cluster_dns_server: 10.43.0.10l_swap_on: false
+    cluster_dns_server: 10.43.0.10
+    fail_swap_on: false
     generate_serving_certificate: false
   kubeproxy:
     image: ""
@@ -115,7 +107,7 @@ services:
     win_extra_binds: []
     win_extra_env: []
 network:
-  plugin: calico
+  plugin: canal
   options: {}
   mtu: 0
   node_selector: {}
@@ -125,52 +117,7 @@ authentication:
   strategy: x509
   sans: []
   webhook: null
-addons: |
-  apiVersion: policy/v1beta1
-  kind: PodSecurityPolicy
-  metadata:
-    name: restricted
-  spec:
-    requiredDropCapabilities:
-    - NET_RAW
-    privileged: false
-    allowPrivilegeEscalation: false
-    defaultAllowPrivilegeEscalation: false
-    fsGroup:
-      rule: RunAsAny
-    runAsUser:
-      rule: MustRunAsNonRoot
-    seLinux:
-      rule: RunAsAny
-    supplementalGroups:
-      rule: RunAsAny
-    volumes:
-    - emptyDir
-    - secret
-    - persistentVolumeClaim
-    - downwardAPI
-    - configMap
-    - projected
-  ---
-  apiVersion: networking.k8s.io/v1
-  kind: NetworkPolicy
-  metadata:
-    name: default-allow-all
-  spec:
-    podSelector: {}
-    ingress:
-    - {}
-    egress:
-    - {}
-    policyTypes:
-    - Ingress
-    - Egress
-  ---
-  apiVersion: v1
-  kind: ServiceAccount
-  metadata:
-    name: default
-  automountServiceAccountToken: false
+addons: ""
 addons_include: []
 system_images:
   etcd: rancher/coreos-etcd:v3.4.14-rancher1
