--- a/starter/cluster.yml
+++ b/starter/cluster.yml
@@ -127,51 +127,51 @@ addons: |
   ---
 
 
-  apiVersion: policy/v1beta1
-  kind: PodSecurityPolicy
-  metadata:
-    name: restricted
-  spec:
-    requiredDropCapabilities:
-    - NET_RAW
-    privileged: false
-    allowPrivilegeEscalation: false
-    defaultAllowPrivilegeEscalation: false
-    fsGroup:
-      rule: RunAsAny
-    runAsUser:
-      rule: MustRunAsNonRoot
-    seLinux:
-      rule: RunAsAny
-    supplementalGroups:
-      rule: RunAsAny
-    volumes:
-    - emptyDir
-    - secret
-    - persistentVolumeClaim
-    - downwardAPI
-    - configMap
-    - projected
-  ---
-  apiVersion: networking.k8s.io/v1
-  kind: NetworkPolicy
-  metadata:
-    name: default-allow-all
-  spec:
-    podSelector: {}
-    ingress:
-    - {}
-    egress:
-    - {}
-    policyTypes:
-    - Ingress
-    - Egress
-  ---
-  apiVersion: v1
-  kind: ServiceAccount
-  metadata:
-    name: default
-  automountServiceAccountToken: false 
+  # apiVersion: policy/v1beta1
+  # kind: PodSecurityPolicy
+  # metadata:
+  #   name: restricted
+  # spec:
+  #   requiredDropCapabilities:
+  #   - NET_RAW
+  #   privileged: false
+  #   allowPrivilegeEscalation: false
+  #   defaultAllowPrivilegeEscalation: false
+  #   fsGroup:
+  #     rule: RunAsAny
+  #   runAsUser:
+  #     rule: MustRunAsNonRoot
+  #   seLinux:
+  #     rule: RunAsAny
+  #   supplementalGroups:
+  #     rule: RunAsAny
+  #   volumes:
+  #   - emptyDir
+  #   - secret
+  #   - persistentVolumeClaim
+  #   - downwardAPI
+  #   - configMap
+  #   - projected
+  # ---
+  # apiVersion: networking.k8s.io/v1
+  # kind: NetworkPolicy
+  # metadata:
+  #   name: default-allow-all
+  # spec:
+  #   podSelector: {}
+  #   ingress:
+  #   - {}
+  #   egress:
+  #   - {}
+  #   policyTypes:
+  #   - Ingress
+  #   - Egress
+  # ---
+  # apiVersion: v1
+  # kind: ServiceAccount
+  # metadata:
+  #   name: default
+  # automountServiceAccountToken: false 
   # apiVersion: v1
   # kind: Namespace
   # metadata:
