--- a/starter/cluster.yml
+++ b/starter/cluster.yml
@@ -71,8 +71,8 @@ services:
     #   enabled: true
   kube-controller:
     image: ""
-    extra_args:  
-      feature-gates: RotateKubeletServerCertificate=true
+    extra_args: {} 
+      # feature-gates: RotateKubeletServerCertificate=true
     extra_binds: []
     extra_env: []
     win_extra_args: {}
@@ -90,10 +90,10 @@ services:
     win_extra_env: []
   kubelet:
     image: ""
-    extra_args: 
-      feature-gates: RotateKubeletServerCertificate=true
-      protect-kernel-defaults: "true"
-      tls-cipher-suites: TLS_ECDHE_ECDSA_WITH_AES_128_GCM_SHA256,TLS_ECDHE_RSA_WITH_AES_128_GCM_SHA256,TLS_ECDHE_ECDSA_WITH_CHACHA20_POLY1305,TLS_ECDHE_RSA_WITH_AES_256_GCM_SHA384,TLS_ECDHE_RSA_WITH_CHACHA20_POLY1305,TLS_ECDHE_ECDSA_WITH_AES_256_GCM_SHA384,TLS_RSA_WITH_AES_256_GCM_SHA384,TLS_RSA_WITH_AES_128_GCM_SHA256
+    extra_args: {}
+      # feature-gates: RotateKubeletServerCertificate=true
+      # protect-kernel-defaults: "true"
+      # tls-cipher-suites: TLS_ECDHE_ECDSA_WITH_AES_128_GCM_SHA256,TLS_ECDHE_RSA_WITH_AES_128_GCM_SHA256,TLS_ECDHE_ECDSA_WITH_CHACHA20_POLY1305,TLS_ECDHE_RSA_WITH_AES_256_GCM_SHA384,TLS_ECDHE_RSA_WITH_CHACHA20_POLY1305,TLS_ECDHE_ECDSA_WITH_AES_256_GCM_SHA384,TLS_RSA_WITH_AES_256_GCM_SHA384,TLS_RSA_WITH_AES_128_GCM_SHA256
     extra_binds: []
     extra_env: []
     win_extra_args: {}
