--- a/starter/cluster.yml
+++ b/starter/cluster.yml
@@ -73,8 +73,8 @@ services:
        configuration: null
   kube-controller:
     image: ""
-    extra_args: 
-      feature-gates: RotateKubeletServerCertificate=true
+    extra_args: {}
+#      feature-gates: RotateKubeletServerCertificate=true
     extra_binds: []
     extra_env: []
     win_extra_args: {}
